--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Mesto</title>
+  <link rel="icon" href="./images/favicon.ico">
+  <link rel="icon" href="./images/favicon.svg" type="image/svg+xml">
+  <link rel="apple-touch-icon" href="./images/favicons/apple.png">
   <link rel="stylesheet" href="./pages/index.css">
 </head>
 <body class="page">
